--- a/templates/components/Editor.html.twig
+++ b/templates/components/Editor.html.twig
@@ -4,6 +4,6 @@
     <div id="editorjs" class="bg-light rounded-3"></div>
 
     <div class="mt-3">
-        <button class="btn btn-primary" {{ stimulus_action('editor', 'save') }}>Save</button>
+        <button class="btn btn-primary" {{ stimulus_action('@pentiminax/ux-editor/editor', 'save') }}>Save</button>
     </div>
 </div>
